# wb_anki

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  prd.md  pyproject.toml
src/wb_anki/: anki_client.py  cli.py  parser.py
src/wb_anki/cli/: __init__.py  cli.py
src/wb_anki/client/: __init__.py  anki_client.py
src/wb_anki/config/: __init__.py
src/wb_anki/parser/: __init__.py  parser.py
tests/: __init__.py  test_anki_client.py  test_config.py  test_parser.py
wb_anki/: __init__.py  config.py
