[project]
name = "wb-anki"
version = "1.0.0"
description = "A command-line Python script that automates the creation of Anki flashcards from word pairs using AnkiConnect API"
readme = "README.md"
requires-python = ">=3.13.5"
authors = [
    {name = "WB_Anki", email = "contact@example.com"}
]
keywords = ["anki", "flashcards", "cli", "ankiconnect", "language-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.0.0"
]

[project.scripts]
wb-anki = "src.wb_anki.cli.cli:main"

[project.urls]
Homepage = "https://github.com/wb-anki/wb-anki"
Repository = "https://github.com/wb-anki/wb-anki"
Documentation = "https://github.com/wb-anki/wb-anki#readme"
"Bug Tracker" = "https://github.com/wb-anki/wb-anki/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov=src --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
mypy_path = "src"
packages = ["wb_anki"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.flake8]
max-line-length = 120

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
